# datasciences00

./: README.md
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py  tester.py
ex03/: NULL_not_found.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/: LICENSE  README.md  setup.cfg  tester.py
ex09/ft_package/: __init___.py
ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
