
[metadata]
name = ft_package
version = 0.0.1
author = youssef
author_email = ylamkhan@student.1337.ma
description = A sample test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ylamkhan/ft_package
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
